--- a/Macbook-3/index3.html
+++ b/Macbook-3/index3.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 
 <html lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>3</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
-<body class="m-0 p-0 is-size-5">
-    <header></header>
+
+<body>
+
     <section class="section py-0 mt-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-4  pl-0 pb-3" href="../Macbook-1/index.html">
+                <a class="navbar-item is-size-4 is-size-5-mobile  pl-0 pb-3" href="../Macbook-1/index.html">
                     Smoothiefeed
                 </a>
                 <a class="navbar-burger" id="burger">
@@ -37,10 +40,11 @@
                 <div class="navbar-end">
                     <div class="navbar-item ">
                         <a class="navbar-item is-size-5 pl-0" href="#">1000$</a>
-                        <a class="navbar-item is-size-5 is-flex is-align-items-center pl-0" href="../Macbook-5/index.html">
+                        <a class="navbar-item is-size-5 is-flex is-align-items-center pl-0"
+                            href="../Macbook-5/index.html">
                             <div class="pr-3">Имя Фамилия</div>
                             <svg width="50" height="50" viewBox="0 0 60 60" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
+                                xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
                             </svg>
                         </a>
@@ -49,35 +53,43 @@
             </div>
         </nav>
     </section>
+
     <section class="section  pb-4">
-        <h1 class="title is-size-1">Лента</h1>
+        <h1 class="title is-size-1 is-size-3-mobile">Лента</h1>
         <div class="main_container has-background-light p-5 pb-6 ">
-            <h2 class="title is-size-3">Привет, Имя!</h2>
+            <h2 class="title is-size-3 is-size-4-mobile">Привет, Имя!</h2>
             <div class=" main_container_text  mb-6 ">
-                <p class="subtitle is-size-5">На сегодня, 10 апреля, у Вас есть 3 поста по выбранному плану “Детокс Хард”</p>
-                <p class="subtitle is-size-5">За соблюдение сегодняшней нормы Вы получите 15$</p>
-                <p class="subtitle is-size-5">Прогресс: 13 дней из 15</p>
+                <p class="subtitle is-size-5 is-size-6-mobile">На сегодня, 10 апреля, у Вас есть 3 поста по выбранному
+                    плану “Детокс
+                    Хард”</p>
+                <p class="subtitle is-size-5 is-size-6-mobile">За соблюдение сегодняшней нормы Вы получите 15$</p>
+                <p class="subtitle is-size-5 is-size-6-mobile">Прогресс: 13 дней из 15</p>
             </div>
             <div class="main_container_button mb-6 ">
-                <div class="columns ">
-                    <div class="column is-6 is-offset-3">
-                        <a href="#" class="button is-dark is-medium is-size-4 py-4 ">Перейти к просмотру ленты</a>
+                <div class="columns is-centered">
+                    <div class="column is-6-desktop is-8-tablet is-12-mobile">
+                        <a href="#"
+                            class="button is-dark is-medium is-size-4 is-size-6-mobile py-4 is-size-5-tablet">Перейти к
+                            просмотру
+                            ленты</a>
                     </div>
                 </div>
                 <div class="columns is-flex flex-column">
-                    <div class="column  is-3  is-offset-3-desktop">
-                        <a href="../Macbook-6/index.html" class="button  is-dark is-medium is-size-5 py-4" >
-                            <div class="button_text is-inline-flex is-justify-content-space-between is-align-items-center">
+                    <div class="column is-3-desktop is-offset-3-desktop is-4-tablet is-offset-2-tablet is-12-mobile">
+                        <a href="../Macbook-6/index.html" class="button  is-dark is-medium py-4">
+                            <div
+                                class="button_text is-flex is-justify-content-space-between is-align-items-center is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                                 <p>+1 пост</p>
                                 <p>10$</p>
                             </div>
                         </a>
                     </div>
-                    <div class="column  is-3 ml-1 ">
-                        <a href="../Macbook-6/index.html" class="button is-dark is-medium is-size-5 py-4 ">
-                            <div class="button_text is-inline-flex is-justify-content-space-between is-align-items-center">
+                    <div class="column is-3-desktop is-4-tablet is-12-mobile">
+                        <a href="../Macbook-6/index.html" class="button is-dark is-medium py-4 ">
+                            <div
+                                class="button_text is-flex is-justify-content-space-between is-align-items-center is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                                 <p>+1 пост</p>
-                                <div class="text1 has-text-right is-size-6 pl-2">
+                                <div class="text1 has-text-right is-size-6-tablet pl-2">
                                     <p>за просмотр</p>
                                     <p>рекламы</p>
                                 </div>
@@ -88,13 +100,16 @@
             </div>
         </div>
     </section>
-   
+
     <footer class="section py-3 footer has-background-white">
         <div class="content">
             <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
     </footer>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
