--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="column is-narrow">
                     <div class="buttons">
                         <a class="button is-light is-medium">
-                          <img src='' alt='like'>
+                          <img src='like.png' alt='like'>
                           1400
                         </a>
                     </div>
@@ -157,7 +157,7 @@
                 <div class="column is-narrow">
                     <div class="buttons">
                         <a class="button is-light is-medium">
-                          <img src='' alt='comments'>
+                          <img src='chat.png' alt='comments'>
                           1400
                         </a>
                     </div>
