--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="columns is-mobile">
                 <div class="column is-narrow">
                     <div class="buttons">
-                        <a class="button is-light is-medium">
+                        <a class="button is-light is-small">
                           <img src='' alt='like'>
                           1400
                         </a>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="column is-narrow">
                     <div class="buttons">
-                        <a class="button is-light is-medium">
+                        <a class="button is-light is-small">
                           <img src='' alt='comments'>
                           1400
                         </a>
